fixes carousel image overflow and home page responsiveness

--- a/src/Pages/CartPage/CartPage.module.scss
+++ b/src/Pages/CartPage/CartPage.module.scss
@@ -30,6 +30,13 @@
       width: 40%;
     }
   }
+
+  &__subtotal {
+    display: none;
+    @include mq.md-up {
+      display: block;
+    }
+  }
 }
 
 .item {
