--- a/src/containers/Navbar/Navbar.module.scss
+++ b/src/containers/Navbar/Navbar.module.scss
@@ -5,6 +5,7 @@
   @include mixins.flex(column, center);
   align-items: center;
   gap: 1.5em;
+  margin-bottom: 20px;
 
   &__links {
     @include mixins.flex(row, center);
